[package]
name = "kvs"
edition = "2021"

[features]
ecs = []
docker = []
sim = ["hydro_lang/sim"]

[dependencies]
stageleft.workspace = true

hyper = { version = "0.14.26", features = ["server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# These crates have only been added to showcase the example code that is part of the template.
aws-sdk-appconfigdata = "1"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
async-stream = "0.3"
futures = "0.3"
chrono = "0.4.31"
rand = "0.8.5"

hydro_lang = { path = "../hydro_lang", version = "^0.17.0-alpha.4", features = ["docker_deploy", "ecs_deploy"] }
hydro_std = { path = "../hydro_std", version = "^0.17.0-alpha.4" }
lattices = { path = "../lattices", version = "^0.8.0-alpha.3", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.29.0", features = ["io-util", "net", "rt", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"] }
bincode = "1.3"
bytes = "1.1"
ctor = "0.2"
prost = "0.13"
tonic = "0.12"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.29.0", features = ["full"] }
hydro_lang = { path = "../hydro_lang", version = "^0.17.0-alpha.4", features = ["sim", "deploy", "docker_deploy"] }
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.17.0-alpha.3" }
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }


[build-dependencies]
stageleft_tool.workspace = true

tonic-build = "0.12"
protoc-bin-vendored = "3"

[[example]]
name = "kvs_docker"
