[package]
name = "lattices"
publish = true
version = "0.8.0-alpha.0"
documentation = "https://docs.rs/lattices/"
description = "Lattice data types for simplifying distributed state by providing associativity, commutativity, and idempotence."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
default = ["std"]
std = ["alloc", "serde?/std", "variadics/std", "roaring/std", "dep:fst", "cc-traits/std"]
alloc = ["serde?/alloc", "variadics/alloc", "cc-traits/alloc"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
cc-traits = { version = "2.0.0", default-features = false }
fst = { version = "0.4.0", optional = true }
lattices_macro = { path = "../lattices_macro", version = "^0.6.0" }
roaring = { version = "0.11.0", default-features = false }
sealed = "0.6.0"
serde = { version = "1.0.197", features = ["derive"], optional = true, default-features = false }
variadics = { path = "../variadics", version = "^1.0.0-alpha.0", default-features = false }
variadics_macro = { path = "../variadics_macro", version = "^0.8.0-alpha.0" }

# coax cargo-smart-release into publishing this crate.
# https://github.com/hydro-project/hydro/blob/main/RELEASING.md#addendum-adding-new-crates
# https://github.com/GitoxideLabs/cargo-smart-release/issues/36
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0", optional = true }

[dev-dependencies]
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0", features = ["trybuild"] }

[build-dependencies]
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0" }
