[package]
name = "pusherator"
publish = true
version = "0.0.12"
documentation = "https://docs.rs/pusherator/"
description = "Push-based version of Rust iterators"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
default = [ "demux" ]
demux = [ "variadics" ]
variadics = [ "dep:variadics" ]

[package.metadata.docs.rs]
all-features = true

[dependencies]
either = "1.0.0"
sealed = { optional = true, version = "0.6" }
variadics = { optional = true, path = "../variadics", version = "^0.0.9" }

[dev-dependencies]
tokio = { version = "1.29.0", features = [ ] }
tokio-stream = { version = "0.1.3", default-features = false, features = [ ] }
tokio-util = { version = "0.7.5", features = [ ] }